# AlgoSplit

./: .gitignore  .vercelignore  DATA_FLOW.md  DEPLOYMENT.md  FEATURE_COVERAGE.md  MIGRATION.md  README.md  SOCIAL_AUTH_SETUP.md  progress.txt  pytest.ini  quick_test.py  requirements.txt  sample_split.csv  start_server.bat  test_api.json  test_with_curl.bat
backend/: app.py  main.py  pyproject.toml  requirements.txt  vercel.json
backend/api/: analysis_routes.py  dependencies.py  routes.py  security.py
backend/core/: MainClasses.py  analysis_cache.py  exerciseMatching.py  exercise_parser.py  fatigue_modifiers.py  granular_patterns.py  movementMatching.py  movement_patterns.py  muscle_regions.py  rate_limit.py  rust_analysis.py  split_import.py  stimulus_tiers.py
backend/db/: __init__.py  supabase.py
backend/schemas/: auth.py  bodyweight.py  comparisons.py  constraints.py  imports.py  meso_templates.py  models.py  overrides.py  periodization.py  programs.py  split_shares.py  splits.py  workouts.py
backend/scripts/: analyze_csv.py  benchmark_analysis_engines.py  keepalive_ping.py  quick_test.py
backend/tests/: conftest.py  test_analysis_cache.py  test_analysis_engine.py  test_analysis_routes.py  test_auth_client_isolation.py  test_auth_dependencies.py  test_auth_routes.py  test_cold_start_imports.py  test_database_migration_contract.py  test_import_preview.py  test_movement_matching.py  test_openapi_contract.py  test_program_diagnostics_routes.py  test_rust_analysis_engine.py  test_security_config.py  test_session_templates_routes.py  test_split_import.py  (+4 more)
(+521 files in other folders)
