[project]
name = "algosplit-backend"
version = "1.0.0"
description = "AlgoSplit FastAPI backend"
requires-python = ">=3.12,<3.13"
dependencies = [
    "analysis-engine-rs",
    "email-validator>=2.1.0",
    "fastapi>=0.104.0",
    "httpx[http2]>=0.25.2",
    "numpy>=1.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.6",
    "redis>=5.0.0",
    "supabase>=2.3.0",
    "uvicorn[standard]>=0.24.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=5.0.0",
]

[tool.uv.workspace]
members = ["rust/analysis_engine"]

[tool.uv.sources]
analysis-engine-rs = { workspace = true }
