[package]
name = "analysis_engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "analysis_engine_rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
indexmap = { version = "2", features = ["serde"] }
pyo3 = { version = "0.22" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[dev-dependencies]
serde_json = "1"
